# nucleo

./: .gitignore  .python-version  .rsync-exclude  __init__.py  analysis.ipynb  fitting.py  fitting_project.py  git_key.pub  job_ncl_main.sh  job_ncl_test.sh  job_nucleo.sh  main.py  ncl_outline.ipynb  plots.py  pyproject.toml  requirements.txt  terminal.txt  ~  ~.pub
.venv_nucleo/: pyvenv.cfg
.venv_nucleo_3.12.3/: pyvenv.cfg
NucPosSimulator/.venv_NPS/: pyvenv.cfg
NucPosSimulator/NucPosSimulator_linux64/: NucPosSimulator  NucPosSimulator.ipynb  README.txt  analyse_nucpos.py  params.txt  params_2.txt  params_test_custom.txt  params_test_short.txt  parse_results.py  plot_occupancy.py
NucPosSimulator/NucPosSimulator_linux64/out_custom/: ESC_chr14_47450015_47750172.bed.energyOut  ESC_chr14_47450015_47750172.bed.result.bed  ESC_chr14_47450015_47750172.bed.sim  linkers.csv  parsed_positions.csv
NucPosSimulator/NucPosSimulator_linux64/out_test/: ESC_chr14_47450015_47750172.bed.energyOut  ESC_chr14_47450015_47750172.bed.result.bed  ESC_chr14_47450015_47750172.bed.sim  linkers.csv  parsed_positions.csv
NucPosSimulator/NucPosSimulator_linux64/testdata/: ESC_chr14_47450015_47750172.bed
marcand/: pyproject.toml
marcand/analysis/: mrc_outline.ipynb
marcand/src/: marcand.py
marcand/src/marcand.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
marcand/src/mrc/: plots.py
notebooks/figures/article_1/: figure_1.ipynb  figure_2.ipynb  figure_3.ipynb
notebooks/one_step/post_processing/: cuts.ipynb  maps.ipynb  single_trajectory.ipynb
notebooks/two_steps/: reverse_and_forward.ipynb  ryu_datas.ipynb  two_steps.ipynb
notebooks/work/: fact.ipynb  new_obstacles.ipynb
nucleo/: pyproject.toml  working_on_reverse_forward.ipynb
nucleo/analysis/: 1D.ipynb  1D_configuration.ipynb  2D.ipynb  2D_cuts.ipynb  2D_heatmaps.ipynb  2D_maps.ipynb  compaction.ipynb  merging.py  two_steps.ipynb
nucleo/notebooks/: analysis.ipynb
nucleo/nucleo/: landscape.py  launching.py  metrics.py  models.py  probabilities.py  run.py  utils.py  writing.py
nucleo/src/: analysis.py  fitting.py  landscape.py  launching.py  main.py  models.py  nucleo.py  plots.py  probas.py  utils.py  writing.py
nucleo/src/ncl/: main.py  (+11 more)
nucleo/working_on/: NucPosSimulator.ipynb  Ryu_Step_size_distributions_for_Daniel.xlsx  compaction.ipynb  density.ipynb  fact.ipynb  figures.ipynb  fitting_ryu.py  new_formalism.ipynb  new_obstacles.ipynb  reading_a_parquet.py  reverse_and_forward.ipynb  ryu_datas.ipynb  working_on.py  working_on_density.py  working_on_obstacles.ipynb
organic/analysis/: forward_vs_reverse.ipynb
organic/organic/: organic.py
ploop/: pyproject.toml
ploop/analysis/: all_medians.csv  ryu.ipynb  ryu_datas.xlsx
ploop/src/ploop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: probabilities.py  pyproject.toml  writing.py
utils/src/tls/: utils.py  writing.py
utils/src/utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+43 files in other folders)
