[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleo"
version = "0.1.0"
description = "My PhD tools for nucleo simulations"
authors = [{ name="Nicolas PELLET", email="nicolas.pellet@ens-lyon.fr" }]
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "tqdm",
  "pyarrow",
  "polars",
  "scipy"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nucleo*"]
