[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marcand"
version = "0.1.0"
description = "My PhD tools for marcand simulations"
authors = [{ name = "Nicolas PELLET", email = "nicolas.pellet@ens-lyon.fr" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "tqdm",
  "pyarrow",
  "polars",
  "nucleo @ file:///home/nicolas/Documents/PhD/Workspace/nucleo", # ← si mrc importe ncl
  "ploop @ file:///home/nicolas/Documents/PhD/Workspace/ploop",   # ← si mrc importe plp
  "utils @ file:///home/nicolas/Documents/PhD/Workspace/utils",   # ← si mrc importe tls
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
