[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ploop"
version = "0.1.0"
description = "My PhD tools for ploop"
authors = [{ name = "Nicolas PELLET", email = "nicolas.pellet@ens-lyon.fr" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "tqdm",
  "pyarrow",
  "polars",
  "utils @ file:///home/nicolas/Documents/PhD/Workspace/utils",   # ← si plp importe tls
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
