[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"   # distrib = "utils", package importable = "tls"
version = "0.1.0"
description = "My PhD utility tools"
authors = [{ name = "Nicolas PELLET", email = "nicolas.pellet@ens-lyon.fr" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "tqdm",
  "pyarrow",
  "polars",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
